platforms while MGED on Windows now supports 64-bit releases and
restores command-line scripting support.

Archer gets a user interface facelift with the introduction of a new
geometry browser, list view, buttons, and much more.  As Archer
approaches feature parity with MGED, it gets closer to an official
alpha release status as BRL-CAD's next generation geometry editor.

* fixed Mac OS X 10.5+ mouse input/rotation bug in mged - Bob Parker
* X11 wireframe performance improvements (dm 'X') - Sean Morrison
* rtarea "-u model" specifies output using local units - Keith Bowman
* new bot_split command separates BoTs into multiple BoTs - Bob Parker
* rtarea output provides various common larger units - Keith Bowman
* rtarea run within mged now displays using local units - Keith Bowman
* re-enabled archer's embedded image framebuffer - Bob Parker
* fixed mged and nirt crashes handling whitespace lines - Keith Bowman
* newly enhanced archer tree view hierarchy visualization - Bob Parker
* fixed nirt backout bug when origin was ahead of model - Keith Bowman
* fixed mged bug calling 'units' without a database - Erik Greenwald
* analyze, cat, dbfind, & 'l' describe selected objects - Cliff Yapp
* openNURBS updated to version 5.0 (2010-04-09) - Cliff Yapp
* improvements and bug fixes to NURBS ray tracing - Keith Bowman
* new button images and tree-view icons within archer - Cliff Yapp
* html man page viewing in archer - Cliff Yapp
* archer tree view colorization for selected objects - Bob Parker
* replacement of tkimg external dependency with tkpng 0.9 - Cliff Yapp
* libpng upgraded to 1.4.1 - Erik Greenwald
* fixed crash with solids/regions/idents mged commands - Sean Morrison
* g-stl and g-egg have new -8 marching cubes option - Erik Greenwald
* fixed mged bug reading from redirected input on Windows - Bob Parker
* fixed partition selection bug in rt -k cut plane - John Anderson
* added NURBS support for transformation matrices - Keith Bowman